[BUGFIX][TABLE][UI] Fix Table Column sizing issue - Columns should be sized as per content - Columns should not size beyond a max-width - Table container should overflow when columns sizing exceeds available width - Table should have a minimum width of 100% of container - Remove usage of table-col-* classes

--- a/src/main/webapp/css/core/table.css
+++ b/src/main/webapp/css/core/table.css
@@ -1,20 +1,16 @@
 
+.table {
+    max-width: none;
+    min-width: 100%;
+    width: max-content;
+}
+
 .table td {
     padding: 0.25em;
+    vertical-align: middle;
+    max-width: 25em;
 }
 
 .table th {
     padding: 0.5em 0.25em;
-}
-
-.table-col-sm {
-    min-width: 50px;
-}
-
-.table-col-md {
-    min-width: 100px;
-}
-
-.table-col-lg {
-    min-width: 150px;
 }
